force-app/main/default/objects/Product_Partner_Map__c/Product_Partner_Map__c.object-meta.xml
<CustomObject>
    <description>Product Partner Map contains product price, cancellation price and any specific product partner metadata</description>
    <label>Product Partner Map</label>
    <nameField>
        <displayFormat>PPM - {00000000}</displayFormat>
        <label>Product Partner Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Partner Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>