force-app/main/default/objects/Product_Partner_Map__c/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <label>Partner Name</label>
    <referenceTo>PartnerClientMap__c</referenceTo>
    <relationshipLabel>Product Partner Maps</relationshipLabel>
    <relationshipName>Product_Partner_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>