force-app/main/default/objects/Product_Partner_Map__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Partner Maps</relationshipLabel>
    <relationshipName>Product_Partner_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>